<resources>
    <string name="app_name">Find My Salon</string>
    <string name="lbl_signIn">Sign In</string>
    <string name="lbl_signUp">Register here</string>
    <string name="lbl_business">Business</string>
    <string name="lbl_customer">Customer</string>
    <string name="lbl_upload_photo">Upload photo</string>
    <string name="lbl_book">Book now</string>
    <string name="lbl_type_business">Type of business</string>
    <string name="lbl_business_name">Business name</string>
    <string name="lbl_service_name">Service name</string>
    <string name="lbl_first_name">First name</string>
    <string name="lbl_last_name">Last name</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_name">Full name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="lbl_languages">Select languages</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_current_password">Current password</string>
    <string name="lbl__new_password">New password</string>
    <string name="lbl__renew_password">Re-type new password</string>
    <string name="lbl_retype_password">Re-type password</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_services">Services</string>
    <string name="lbl_logout">Log out</string>
    <string name="lbl_roster">Roster staff</string>
    <string name="lbl_business_hour">Business hour</string>
    <string name="lbl_bookings">Bookings</string>
    <string name="lbl_appointment_history">Appointment history</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_update_profile">Update your profile</string>
    <string name="lbl_change_password">Change your password</string>
    <string name="lbl_service">Service:</string>
    <string name="lbl_status">Status:</string>
    <string name="lbl_rate_service">Rate service</string>
    <string name="lbl_step_one">Step 1: Choose a service</string>
    <string name="lbl_step_two">Step 2: Choose staff</string>
    <string name="lbl_step_one_roster">Choose staff</string>
    <string name="lbl_step_two_roster">Step 2: Set days and hours</string>
    <string name="lbl_staff">Staff:</string>
    <string name="lbl_staff_1">Staff</string>
    <string name="lbl_customer_booking">Customer:</string>
    <string name="lbl_date">Date:</string>
    <string name="lbl_time">Time:</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_near_me">Near me</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_business_details">Business details</string>
    <string name="lbl_customer_details">Customer details</string>
    <string name="lbl_staff_details">Staff details</string>
    <string name="lbl_appointment_confirmation">Step 3: Confirm appointment</string>
    <string name="lbl_no_services">No services</string>
    <string name="lbl_no_bookings">No bookings</string>
    <string name="lbl_no_staff">No staff</string>
    <string name="lbl_no_businesses">No businesses</string>
    <string name="lbl_no_fav_businesses">No favorite businesses</string>
    <string name="lbl_all">All</string>
    <string name="lbl_salons">Hair salon</string>
    <string name="lbl_barbershop">Barbershop</string>
    <string name="lbl_current_location">Current location</string>
    <string name="lbl_filter_services">Key word</string>
    <string name="lbl_choose_staff">Choose staff</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_monday">Monday</string>
    <string name="lbl_tuesday">Tuesday</string>
    <string name="lbl_wednesday">Wednesday</string>
    <string name="lbl_thursday">Thursday</string>
    <string name="lbl_friday">Friday</string>
    <string name="lbl_saturday">Saturday</string>
    <string name="lbl_sunday">Sunday</string>
    <string name="lbl_start_time">Start time:</string>
    <string name="lbl_end_time">End time:</string>
    <string name="lbl_filters">Filters</string>
    <string name="lbl_distance">Distance around</string>
    <string name="lbl_budget">Budget</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_opening_hour">Opening hours:</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_description_service">Description service</string>
    <string name="lbl_price_service">Price service</string>
    <string name="lbl_price">Price:</string>
    <string name="lbl_duration_service">Duration service</string>
    <string name="lbl_duration">Duration:</string>
    <string name="lbl_enable_disable">Disable / Enable</string>
    <string name="lbl_tags">Tags</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_order">Display order e.g. 1 - 9999</string>
    <string name="lbl_image_loading">Waiting image loading</string>
    <string name="category_prompt">Choose a category</string>
    <string name="distance_prompt">Distance around</string>
    <string name="pattern">EEE, d MMM yyyy</string>
    <string name="email_pattern">[a-zA-Z0-9._-]+@[a-z0-9]+\\.+[a-z]+</string>
    <string name="phone_pattern">^[0-9]{10}$</string>
    <string-array name="categories_arrays">
        <item>Choose a category</item>
        <item>Haircuts</item>
        <item>Colours</item>
    </string-array>
    <string-array name="time_arrays">
        <item>00</item>
        <item>PM</item>
    </string-array>
    <string-array name="hours_arrays">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="minutes_arrays">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="distances_arrays">
        <item>1km</item>
        <item>10km</item>
        <item>100km</item>
        <item>1000km</item>
    </string-array>
    <string-array name="languages_arrays">
        <item>Choose a language</item>
        <item>English</item>
        <item>Spanish</item>
        <item>Chinese</item>
        <item>Japanese</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_registration_business">RegistrationBusinessActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="warning">Warning</string>
    <string name="incomplete"> Please, fill out all the fields</string>
    <string name="feedback">Your feedback is very important to help us improve our service</string>
    <string name="warning_confirmation">To make changes to your appointment, you have to delete this one and create a new one</string>
    <string name="msg_confirmation">%1$s, your %2$s appointment is confirmed for %3$s</string>
    <string name="msg_staff_hour">%1$s | %2$s</string>
    <string name="address_incomplete"> Invalid address. Please, type and select from suggested list</string>
    <string name="invalid_email"> Email is invalid</string>
    <string name="invalid_phone"> Phone is invalid. Please, enter phone number without country code</string>
    <string name="invalid_language_selected"> Required to pick at least one Language </string>
    <string name="password_no_match">The password confirmation does not match</string>
    <string name="invalid_credentials"> Invalid credentials</string>
    <string name="network_error"> Network error. Please, try again later</string>
    <string name="response_error"> Request could not be processed. Please, try again later</string>
    <string name="duplicate_email"> The email is already registered. Please, use another email</string>
    <string name="incorrect_current_password"> The current password is incorrect</string>
    <string name="camera_not_supported"> Sorry, your device does not support camera</string>
    <string name="registration_successful"> Bravo, you are successfully registered! Would you like to sign in now?</string>
    <string name="ok">OK</string>
    <string name="api_key">AIzaSyArTaAe7YfAZn_ylMk-nGWWRfueTseIV3Q</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="customer_profile_activity">CustomerProfileActivity</string>
    <string name="incorrect_rating">You have not yet reviewed.</string>
    <string name="invalid_service_name"> Service name is invalid</string>
    <string name="invalid_service_price"> Service price is invalid</string>
    <string name="invalid_service_price_at_lease"> Service price need to be larger than $0</string>
    <string name="invalid_service_duration"> Service duration is invalid</string>
    <string name="invalid_service_duration_at_lease"> Service duration need to be longer than 0 min</string>
    <string name="invalid_first_name"> First name is invalid</string>
    <string name="invalid_last_name"> Last name is invalid</string>
    <string name="invalid_full_name"> Full name is invalid</string>
    <string name="invalid_image_size"> The maximum image size is 5MB</string>
    <string name="invalid_upload_file"> This file/image is invalid in your device</string>
    <string name="submit_success">Submitted successfully</string>
    <string name="submit_fail">Submitted failure</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="delete_fail">Deleted failure</string>
    <string name="delete_confirm">Are you sure to delete?</string>
    <string name="cancel_success">Cancel successfully</string>
    <string name="cancel_fail">Cancel failure</string>
    <string name="cancel_confirm">Are you sure cancel this booking?</string>
    <string name="manage_business_hour">Manage business hours</string>
    <string name="search">Search</string>
    <string name="advanced_search">Advanced search</string>
    <string name="profile">Profile</string>
    <string-array name="photo_options">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
    </string-array>
</resources>