<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_appointment"
            android:title="@string/lbl_bookings" />

        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_staff"
            android:title="@string/lbl_staff_1" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_service"
            android:title="@string/lbl_services" />

        <item
            android:id="@+id/nav_roster_staff"
            android:icon="@drawable/ic_time"
            android:title="@string/lbl_roster" />

        <item
            android:id="@+id/nav_business_hour"
            android:icon="@drawable/ic_time"
            android:title="@string/lbl_business_hour" />

        <item
            android:title="@string/lbl_settings">

            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_update_profile"
                        android:icon="@drawable/ic_update"
                        android:title="@string/lbl_update_profile" />

                    <item
                        android:id="@+id/nav_change_password"
                        android:icon="@drawable/ic_password"
                        android:title="@string/lbl_change_password" />

                </group>
            </menu>

        </item>

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/lbl_logout" />



    </group>

</menu>