<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_registration">

    <fragment
        android:id="@+id/nav_registration"
        android:name="com.findmysalon.view.fragments.RegistrationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.findmysalon.view.fragments.SignupFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/nav_signin"
        android:name="com.findmysalon.view.fragments.SigninFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_signin" />


    <fragment
        android:id="@+id/nav_home"
        android:name="com.findmysalon.view.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.findmysalon.view.fragments.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.findmysalon.view.fragments.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


</navigation>