<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorSecondary"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_services"
                    android:textSize="@dimen/text_size_titles"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-60dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_item_service"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/form_container"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="70dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spr_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/category_prompt"
                    android:entries="@array/categories_arrays"/>

                <EditText
                    android:id="@+id/etx_service_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_service_name" />

                <EditText
                    android:id="@+id/etx_description_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_description_service" />

                <EditText
                    android:id="@+id/etx_price_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_price_service"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/etx_duration_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_duration_service"
                    android:inputType="number" />

                <Switch
                    android:id="@+id/stc_status"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_enable_disable" />

                <EditText
                    android:id="@+id/etx_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_tags" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="40dp"
                    android:text="@string/lbl_save"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>