<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorSecondary"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_customer_details"
                    android:textSize="@dimen/text_size_titles"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="textStart"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-60dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_item_service"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/form_container"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/bg_img_circle"
                        >
                        <ImageView
                            android:id="@+id/img_profile_photo"
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/photos_default"
                            android:tint="@color/colorGrayDark"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_upload_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="15dp"
                        android:text="@string/lbl_upload_photo"
                        android:layout_gravity="center"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/etx_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_first_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etx_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_last_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etx_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/etx_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_address"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etx_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_phone_number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/etx_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/etx_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lbl_retype_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="40dp"
                    android:text="@string/lbl_save"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>