<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_close"
            android:tint="@color/colorPrimary" />


        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/bg_img_circle">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_calendar" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_confirmation_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="@dimen/text_size_titles"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:text="@string/msg_confirmation"/>

            <TextView
                android:id="@+id/txt_staff_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/text_size_titles"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/msg_staff_hour"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorGrayDark"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:text="@string/warning_confirmation"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/lbl_cancel"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_confirm"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/lbl_confirm"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
